# bread-content

./: Cargo.toml  README.md
src/: color.rs  config.rs  main.rs
src/component/: battery.rs  cpu.rs  gpu.rs  memory.rs  mod.rs  temperature.rs  time.rs  wifi.rs
