[package]
name = "bread-content"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more = { version = "2.0.1", features = ["display"] }
mio = { version = "1.1.0", features = ["os-poll", "os-ext"] }
sysinfo = { version = "0.37.2", default-features = false, features = ["system"] }
time-format = "1.2.2"
wayland-client = { version = "0.31.11", default-features = false }
wayland-protocols-wlr = { version = "0.3.9", features = ["client"] }

[features]
default = []
timing = []
